# hmm-anomaly

./: CPUUtilization-anomalous-data.csv  CPUUtilization-training.csv  Cargo.toml  README.md
src/: client.rs  hmm.rs  io.rs  lib.rs  main.rs  utils.rs
src/hmm/: hmm.rs  mod.rs  server.rs  utils.rs
src/hmm/traits/: bayesian.rs
src/traits/: bayesian.rs  mod.rs
