[package]
name = "hmm-anomaly"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1", default-features = false }
clap = { version = "4.5.20", default-features = false, features = ["std", "derive"] }
csv = "1.3.1"
nalgebra = "0.33.2"
ndarray = "0.16.1"
rand = "0.9.1"
statrs = "0.18.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140" }
rand_distr = "0.5.1"
plotters = "0.3.7"
chrono = "0.4.41"
home = "0.5.11"
